--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "framework": "vite",
-  "buildCommand": "npm run build --workspace=web",
+  "buildCommand": "npm install && npm run build --workspace=web",
   "outputDirectory": "apps/web/dist",
   "rewrites": [
     {
