--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,110 @@
-# Node
-node_modules/
-dist/
-.npm/
+# ===================================================================
+# General
+# ===================================================================
 
-# Vite
-.vite/
+# Archivos de log
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Python
-__pycache__/
-*.pyc
+# Archivos de variables de entorno (Seguridad)
+# ¡Nunca incluyas archivos con secretos en el repositorio!
 .env
-venv/
-env/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.*
 
-# Editor/OS
-.vscode/
-.idea/
+# Bases de datos locales
+*.sqlite
+*.sqlite3
+
+# ===================================================================
+# Frontend (Node.js / Vite / React)
+# ===================================================================
+
+# Dependencias
+node_modules/
+apps/web/node_modules/
+
+# Carpetas de build
+dist/
+apps/web/dist/
+out/
+apps/web/out/
+build/
+apps/web/build/
+
+# Cache de Vite
+.vite/
+apps/web/.vite/
+
+# Reportes de tests
+coverage/
+apps/web/coverage/
+
+# ===================================================================
+# Backend (Python / FastAPI)
+# ===================================================================
+
+# Entornos virtuales
+venv/
+.venv/
+env/
+.env/
+apps/api/venv/
+apps/api/.venv/
+apps/api/env/
+
+# Archivos compilados de Python
+__pycache__/
+apps/api/__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Cache y reportes de herramientas de Python
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+apps/api/.pytest_cache/
+apps/api/.mypy_cache/
+apps/api/.ruff_cache/
+htmlcov/
+.coverage
+
+# Paquetes de Python
+*.egg-info/
+dist/
+build/
+
+# ===================================================================
+# Sistema Operativo y Editores
+# ===================================================================
+
+# macOS
 .DS_Store
-*.suo
-*.user
-*.userosscache
-*.sln.docstates
-*.userprefs
- Pembroke
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Configuración de Editores
+# VS Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# JetBrains (PyCharm, WebStorm, etc.)
+.idea/
+
+# Sublime Text
+*.sublime-workspace
