--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@types/react-pdf": "^6.2.0",
+    "lucide-react": "^0.562.0",
+    "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^10.3.0",
     "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
